[FIX] Tratamento da lista dos bancos. Agora está com toList que é uma solução mais moderna